# forge

./: .gitattributes  .gitignore  .impeccable.md  CLAUDE.md  DEMO_REWRITE_PLAN.md  FORGE_PLAN.md  FORGE_ROADMAP.md  GITHUB_RELEASE_WALKTHROUGH.md  HANDOFF.md  MACOS_READINESS_NOTE.md  README.md  RELEASE_NOTES.md  SMALL_BATCH_READINESS_PLAN.md  TRANSITION_IMPROVEMENT_PLAN.md  build.bat  dev.bat  dev.sh  forge-demo.html  forge-landing-lofi.html  forge-landing-v2.html  forge-landing-v3.html  forge-landing-v4.html  forge-landing-v5.html  forge-landing.html  index.html  logo-animation-v2.html  logo-animation.html  package-lock.json  package.json  particle-demo.html  particle-system-v1-backup.diff  release.bat  release.sh  vite.config.js
.github/workflows/: release.yml
docs/: codex-app-server-managed-state-report.md  forge-motion-implementation-brief.md  showcase-staging-guide.md
docs/product/: source-of-truth.md
remotion/: index.jsx
scripts/: bump-version.cjs  tauri.cjs
src/: App.jsx  comments.js  main.jsx  previewLauncher.js
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: picker-heph.css  picker.js
src-tauri/src/: comment_server.rs  config.rs  git.rs  lib.rs  preview.rs  pty.rs  workspace.rs
src/components/: AddWorktreeDialog.jsx  DemoStrip.jsx  DocumentTabs.jsx  DocumentViewer.jsx  EmberLayer.jsx  EmptyGroupPicker.jsx  ForgeWordmark.jsx  GuidedTour.jsx  InfoPanel.jsx  InspectorPane.jsx  NewProjectMenu.jsx  NewTabMenu.jsx  (+18 more)
(+35 files in other folders)
