[package]
name = "app"
version = "0.5.45"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["image-png", "unstable"] }
tauri-plugin-log = "2"
portable-pty = "0.8"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
arboard = "3.6"
image = { version = "0.25", default-features = false, features = ["png"] }
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "sync"] }
tower-http = { version = "0.5", features = ["cors"] }
url = "2"
